--- a/eggs.html
+++ b/eggs.html
@@ -13,84 +13,84 @@
 			</div>
 		</header>
 
-      <ul class="eggs small-block-grid-1 large-block-grid-2 ng-scope">
+      <ul class="eggs">
 
-        <li class="egg ng-scope bg-red">
+        <li class="egg bg-red">
           <div class="image"><img alt="" src="assets/images/hard_boiled.449f78e4.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Hard Boiled</h2>
+            <h2 class="name">Hard Boiled</h2>
             <h1 class="dash">&mdash;</h1>
             <div class="explanation ng-binding">
               Cooked in boiling water with the shell on until yolk is completely set
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-green">
+        <li class="egg bg-green">
           <div class="image"><img alt="" src="assets/images/soft_boiled.1f753add.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Soft Boiled</h2>
+            <h2 class="name">Soft Boiled</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Cooked in boiling water with the shell on until whites are set, but yolk is still liquid
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-blue">
+        <li class="egg bg-blue">
           <div class="image"><img alt="" src="assets/images/sunny_side_up.73579f5a.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Sunny Side Up</h2>
+            <h2 class="name">Sunny Side Up</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Fried without ever flipping the egg, whites are cooked but yolk remains liquid
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-purple">
+        <li class="egg bg-purple">
           <div class="image"><img alt="" src="assets/images/poached.84cd498d.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Poached</h2>
+            <h2 class="name">Poached</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Removed from shell, then cooked in hot water or some other liquid
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-teal">
+        <li class="egg bg-teal">
           <div class="image"><img alt="" src="assets/images/over_easy.f64e5c3e.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Over Easy</h2>
+            <h2 class="name">Over Easy</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Fried until white is cooked, then flipped over momentarily so only the top of yolk is set
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-salmon">
+        <li class="egg bg-salmon">
           <div class="image"><img alt="" src="assets/images/over_hard.c410a755.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Over Hard</h2>
+            <h2 class="name">Over Hard</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Fried until white is cooked, then flipped and cooked until yolk is completely set
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-yellow">
+        <li class="egg bg-yellow">
           <div class="image"><img alt="" src="assets/images/scrambled.1e775a7a.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Scrambled</h2>
+            <h2 class="name">Scrambled</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Raw eggs beaten so the egg whites and yolks are mixed, then cooked in a skillet
             </div>
           </div>
         </li>
-        <li class="egg ng-scope bg-navy">
+        <li class="egg bg-navy">
           <div class="image"><img alt="" src="assets/images/omelette.ca8d80cf.svg"></div>
           <div class="description">
-            <h2 class="name ng-binding">Omelette</h2>
+            <h2 class="name">Omelette</h2>
             <h1 class="dash">&mdash;</h1>
-            <div class="explanation ng-binding">
+            <div class="explanation">
               Similar to scrambled, but left flat and then folded and filled with a variety of ingredients
             </div>
           </div>
